peac_dev/force-app/main/default/objects/SLIntegration__c/SLIntegration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Settings for SL Integration</description>
    <label>SL Integration</label>
</CustomObject>