peac_dev/force-app/main/default/objects/SLIntegration__c/fields/CertName__c.field-meta.xml
<CustomField>
    <fullName>CertName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CertName</label>
    <length>30</length>
    <type>Text</type>
</CustomField>