peac_dev/force-app/main/default/objects/SLIntegration__c/fields/SLAuthorization__c.field-meta.xml
<CustomField>
    <fullName>SLAuthorization__c</fullName>
    <description>SL Authorization</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SLAuthorization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>