peac_dev/force-app/main/default/objects/SLIntegration__c/fields/SLIntegrationEndpoint__c.field-meta.xml
<CustomField>
    <fullName>SLIntegrationEndpoint__c</fullName>
    <description>SL Integration Endpoint</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SLIntegrationEndpoint</label>
    <required>true</required>
    <type>Url</type>
</CustomField>