peac_dev/force-app/main/default/objects/SLIntegration__c/fields/SLSiteID__c.field-meta.xml
<CustomField>
    <fullName>SLSiteID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SLSiteID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>